5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/222/users/4078/executions/1578_996.log
== TEST (2019-03-11 20:00:40) 
-- CODE:
print(   "   ***** ")
print (  " (* o o *) "
prin t(  "  *  ^  * ")
print  ( "  * --- * ")
-- ERROR:
File "XXXX", line 3
    prin t(  "  *  ^  * ")
       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-11 20:01:02) 
-- CODE:
print(   "   ***** ")
print (  " (* o o *) "
print(  "   *  ^  * ")
print  ( "  * --- * ")
-- ERROR:
File "XXXX", line 3
    print(  "   *  ^  * ")
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-11 20:01:23) 
-- CODE:
print(   "   ***** ")
print (  " (* o o *) "
print(    " *  ^  * ")
print  ( "  * --- * ")
-- ERROR:
File "XXXX", line 3
    print(    " *  ^  * ")
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-13 17:55:29) 
-- CODE:
print(   "   ***** ")
print (  " (* o o *) "
print(    " *  ^  * ")
print  ( "  * --- * ")
-- EXECUTION TIME:
0.15203
-- ERROR:
  File "/home/codebench/codes/1578/996/main.py", line 3
    print(    " *  ^  * ")
        ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-13 17:57:38) 
-- CODE:
print(   *****
(* o o *)
 *  ^  *
 * --- *
  *****)

-- EXECUTION TIME:
0.268092
-- ERROR:
  File "/home/codebench/codes/1578/996/main.py", line 1
    print(   *****
                ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-13 17:58:17) 
-- CODE:
print(   *****
print(* o o *)
print(*  ^  *)
print(* --- *)
print( *****)

-- ERROR:
File "XXXX", line 1
    print(   *****
                ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-13 17:58:21) 
-- CODE:
print(   *****
print(* o o *)
print(*  ^  *)
print(* --- *)
print( *****)

-- EXECUTION TIME:
0.183257
-- ERROR:
  File "/home/codebench/codes/1578/996/main.py", line 1
    print(   *****
                ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-13 17:58:27) 
-- CODE:
print(   *****)
print(* o o *)
print(*  ^  *)
print(* --- *)
print( *****)

-- ERROR:
File "XXXX", line 1
    print(   *****)
                ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-13 17:58:30) 
-- CODE:
print(   *****)
print(* o o *)
print(*  ^  *)
print(* --- *)
print( *****)

-- EXECUTION TIME:
0.142485
-- ERROR:
  File "/home/codebench/codes/1578/996/main.py", line 1
    print(   *****)
                ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-13 17:58:36) 
-- CODE:
print( *****)
print(* o o *)
print(*  ^  *)
print(* --- *)
print( *****)

-- EXECUTION TIME:
0.204995
-- ERROR:
  File "/home/codebench/codes/1578/996/main.py", line 1
    print( *****)
              ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-13 17:59:07) 
-- CODE:
print( "*****" )
print(* (o o)*)
print(*  ^  *)
print(* --- *)
print( *****)

-- EXECUTION TIME:
0.110056
-- ERROR:
  File "/home/codebench/codes/1578/996/main.py", line 2
    print(* (o o)*)
               ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-13 17:59:25) 
-- CODE:
print( "*****" )
print(* (o o)*)
print(""*  ^  *)
print(* --- *)
print( *****)

-- ERROR:
File "XXXX", line 2
    print(* (o o)*)
               ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-13 17:59:43) 
-- CODE:
print( "*****" )
print(* (o o)*)
print(""*  ^  *)
print(* --- *)
print( *****"")

-- EXECUTION TIME:
0.215199
-- ERROR:
  File "/home/codebench/codes/1578/996/main.py", line 2
    print(* (o o)*)
               ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-13 18:00:47) 
-- CODE:
print("  ***** ")
print("(* o o *)")
print("*  ^  *")
print(" * --- *")
print(" ***** ")

-- EXECUTION TIME:
0.140421
-- TEST CASE 1:
---- input:
xx
---- correct output:
*****
(* o o *)
*  ^  *
* --- *
*****
---- user output:
***** 
(* o o *)
*  ^  *
 * --- *
 *****
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
